<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp">

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin_outline"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/bitmap_a"
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY" />

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/bitmap_b"
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY" />

                    </android.support.v7.widget.CardView>

                </LinearLayout>

            </HorizontalScrollView>

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/option_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
                tools:text="名称" />

            <LinearLayout
                android:id="@+id/option_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:layout_marginBottom="@dimen/detail_activity_margin"
                android:orientation="horizontal"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/ic_check_circle_black_24dp" />

                <TextView
                    android:id="@+id/option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    tools:text="4号楼" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_text_view" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:text="@string/detail_item_picked_place"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="地点" />

            <TextView
                android:id="@+id/place_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                tools:text="bsnfnbbgfbfgg" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/place_text_view" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:text="@string/detail_item_founder"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                tools:text="拾取人" />

            <TextView
                android:id="@+id/founder_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                tools:text="fasvasdvasdv" />

            <View
                android:id="@+id/divider3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/founder_text_view" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:text="@string/detail_item_date"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                tools:text="日期" />

            <TextView
                android:id="@+id/date_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                tools:text="csdacasv" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_text_view" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:text="@string/detail_item_call"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:text="手机" />

            <TextView
                android:id="@+id/tel_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:text="csdacasv" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tel_text_view" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:text="@string/detail_item_qq"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                tools:text="QQ" />

            <TextView
                android:id="@+id/qq_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/view3"
                tools:text="csdacasv" />

            <View
                android:id="@+id/view4"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qq_text_view" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:text="@string/detail_item_wechat"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                tools:text="微信" />

            <TextView
                android:id="@+id/wechat_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/view4"
                tools:text="csdacasv" />

            <View
                android:id="@+id/view5"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/detail_activity_margin_outline"
                android:layout_marginTop="@dimen/detail_activity_margin"
                android:layout_marginEnd="@dimen/detail_activity_margin_outline"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qq_text_view" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</LinearLayout>